--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site-lisp/smex"]
 	path = site-lisp/smex
 	url = git://github.com/nonsequitur/smex.git
+[submodule "site-lisp/js2-mode"]
+	path = site-lisp/js2-mode
+	url = git://github.com/magnars/js2-mode.git
