--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/zenburn"]
 	path = themes/zenburn
 	url = git://github.com/bbatsov/zenburn-emacs.git
+[submodule "themes/tomorrow"]
+	path = themes/tomorrow
+	url = git://github.com/chriskempson/tomorrow-theme.git
