--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/nonsequitur/smex.git
 [submodule "site-lisp/js2-mode"]
 	path = site-lisp/js2-mode
-	url = git://github.com/magnars/js2-mode.git
+	url = git://github.com/mooz/js2-mode.git
 [submodule "themes/zenburn"]
 	path = themes/zenburn
 	url = git://github.com/bbatsov/zenburn-emacs.git
