--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "site-lisp/powerline"]
 	path = site-lisp/powerline
 	url = git://github.com/milkypostman/powerline.git
+[submodule "site-lisp/ace-jump-mode"]
+	path = site-lisp/ace-jump-mode
+	url = git://github.com/winterTTr/ace-jump-mode.git
