--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "site-lisp/clojure-mode"]
 	path = site-lisp/clojure-mode
 	url = git://github.com/technomancy/clojure-mode.git
+[submodule "site-lisp/nrepl"]
+	path = site-lisp/nrepl
+	url = git://github.com/kingtim/nrepl.el.git
