--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 	path = site-lisp/python-mode
 	url = git://github.com/emacsmirror/python-mode.git
         ignore = dirty
+[submodule "site-lisp/yaml-mode"]
+	path = site-lisp/yaml-mode
+	url = git://github.com/yoshiki/yaml-mode.git
