--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,6 @@
 [submodule "site-lisp/jinja2-mode"]
 	path = site-lisp/jinja2-mode
 	url = git://github.com/paradoxxxzero/jinja2-mode.git
+[submodule "site-lisp/ag.el"]
+	path = site-lisp/ag.el
+	url = git://github.com/Wilfred/ag.el.git
