--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule "site-lisp/multiple-cursors.el"]
 	path = site-lisp/multiple-cursors.el
 	url = git://github.com/magnars/multiple-cursors.el.git
+[submodule "site-lisp/expand-region.el"]
+	path = site-lisp/expand-region.el
+	url = https://github.com/magnars/expand-region.el.git
