--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "site-lisp/expand-region.el"]
 	path = site-lisp/expand-region.el
 	url = https://github.com/magnars/expand-region.el.git
+[submodule "site-lisp/find-file-in-project"]
+	path = site-lisp/find-file-in-project
+	url = https://github.com/technomancy/find-file-in-project.git
