--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "site-lisp/dash.el"]
 	path = site-lisp/dash.el
 	url = https://github.com/magnars/dash.el.git
+[submodule "site-lisp/terminal-notifier.el"]
+	path = site-lisp/terminal-notifier.el
+	url = git@github.com:krismolendyke/terminal-notifier.el.git
