--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "site-lisp/monetate-mode.el"]
 	path = site-lisp/monetate-mode.el
 	url = git@github.com:krismolendyke/monetate-mode.el.git
+[submodule "site-lisp/f.el"]
+	path = site-lisp/f.el
+	url = https://github.com/rejeep/f.el.git
