--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "themes/tomorrow"]
 	path = themes/tomorrow
 	url = git://github.com/chriskempson/tomorrow-theme.git
+	ignore = dirty
 [submodule "themes/solarized"]
 	path = themes/solarized
 	url = git://github.com/sellout/emacs-color-theme-solarized.git
