Add clock-face as submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "site-lisp/font-awesome.el"]
 	path = site-lisp/font-awesome.el
 	url = git@github.com:krismolendyke/font-awesome.el.git
+[submodule "site-lisp/clock-face.el"]
+	path = site-lisp/clock-face.el
+	url = git@github.com:krismolendyke/clock-face.el.git
