Migrate to im-feeling-lucky submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 [submodule "site-lisp/clock-face.el"]
 	path = site-lisp/clock-face.el
 	url = git@github.com:krismolendyke/clock-face.el.git
+[submodule "site-lisp/im-feeling-lucky.el"]
+	path = site-lisp/im-feeling-lucky.el
+	url = https://github.com/krismolendyke/im-feeling-lucky.el.git
