--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ backup/
 bookmarks
 custom.el
 games/
+history
 tutorial/
 url/
 
@@ -44,3 +45,16 @@ tramp
 
 # cask packages
 .cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
