--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ custom.el
 games/
 history
 tutorial/
+/transient/
 url/
 
 ####################################################################################
