--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ recentf
 smex-items
 tutorial/
 url/
+places
 
 ####################################################################################
 # Below from:                                                                      #
